--- a/src/components/tabList/TabList.module.scss
+++ b/src/components/tabList/TabList.module.scss
@@ -3,5 +3,4 @@
   grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
   width: 100%;
   row-gap: 15px;
-  z-index: 0;
 }
